fix z-index du coeur

--- a/app/assets/stylesheets/components/_heart.scss
+++ b/app/assets/stylesheets/components/_heart.scss
@@ -11,6 +11,6 @@
   color: $cream;
   font-size: 140%;
   cursor: pointer;
-  z-index: 1;
+  z-index: 0;
   color: $gold;
 }
